tests/golden/type_errors/generic_constraint_argument.cd
fun numeric<T: number>(value: T): T {
  return value;
}

print numeric("text");
