tests/golden/type_errors/generic_constraint_argument.err
Type error at 5:21: function call: type parameter T must satisfy number, got string
  print numeric("text");
                      ^
